# openimages_workbench

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: copilot-setup-steps.yml
src/: app.html
src-gpui/: Cargo.toml
src-gpui/src/: main.rs  state.rs
src-gpui/src/logic/: csv_meta.rs  download.rs  index.rs  mod.rs  models.rs
src-gpui/src/views/: download.rs  home.rs  jobs.rs  mod.rs  theme.rs  viewer.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: csv_meta.rs  download.rs  index.rs  mod.rs
src/lib/: jobStore.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/download/: +page.svelte
src/routes/jobs/: +page.svelte
src/routes/viewer/: +page.svelte
