[package]
name = "openimages-workbench-gpui"
version = "0.1.0"
edition = "2021"
description = "Open Images Workbench – GPUI-rs native desktop UI (no WebView)"

[[bin]]
name = "oidw"
path = "src/main.rs"

[dependencies]
# GPUI UI framework (Zed's GPU-accelerated UI)
gpui = "0.2.2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client for CSV + image downloads
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# CSV parsing
csv = "1"

# Serialization (shared models)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image loading + decoding for the viewer
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Utilities
anyhow = "1"
dirs = "5"
