[package]
name = "openimages_workbench"
version = "0.1.0"
description = "Open Images Workbench – Tauri desktop app for Open Images dataset management"
authors = ["ry24aai-herts-ac-uk"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openimages_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async HTTP for CSV + image downloads
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CSV parsing (Open Images annotation files)
csv = "1"

